--- a/pages/functions/basic-functions.html
+++ b/pages/functions/basic-functions.html
@@ -105,6 +105,11 @@ divided();</span></pre>
 
 
 
+
+
+
+
+
   <section class="container">
         <h1>Declaring functions</h1>
         <h2>2 ways to declare a function</h2>
@@ -150,6 +155,15 @@ plus(2,2);</span></span></pre>
                 <p>Functions stored in variables do not need function names. They are always invoked (called) using the variable name.</p>
             </div>
         </div>
+
+        <div class="alert alert-note">
+            <div class="alert-icon">
+                <img src="../../_img/note-icon.png" width="60" height="60">
+            </div>
+            <div class="alert-content"><p>If you create a function, you can call it by its function name.</p>
+              <p>But, if you assign the function to a variable, the function name no longer exists in the GLOBAL scope.</p>
+              <p>So, you must call the function by the variable name.</p></div></div>
+
 
         <h4>Variable assigned but not used</h4>
         <div class="row">
