--- a/pages/functions/basic-functions.html
+++ b/pages/functions/basic-functions.html
@@ -29,92 +29,97 @@
                     <li>Function names cannot start with a number. However, they can include: $, _, a...z, 0...9</li>
                     <li>You can have zero or as many parameters as you want, and these will become variables that are local to and only available inside your function.</li>
                     <li>Function parameters are the names listed in the function definition.</li>
-<li>Function arguments are the real values received by the function when it is invoked.</li>
+                    <li>Function arguments are the real values received by the function when it is invoked.</li>
                 </ul>
 
-            </div>
-        </div>
-</section>
-
-
-
-    <section class="container">
-        <h1>3 types of Functions</h1>
-        <div class="row">
-            <div class="col">
-                <p>Steps to add a new DOM element.</p>
-                <ul>
-                    <li><span class="standout">Named</span> - executed when called by name. Usefull when the function needs to be called multiple times.</li>
-                    <li><span class="standout">Anonymous</span> - ran after being triggered by an event. Parenthesis are right after the word function.</li>
-                    <li><span class="standout">Immediately</span> - invoked function expressions run the moment the browser encounters them. These are anonymous functions with another () at the end to trigger them. And it's all wrapped in parenthesis.</li>
-                </ul>
-            </div>
-        </div>
-
-        <h3>Named</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>This function has a name of 'multiply'.</p>
-            </div>
-
-            <div class="col-6">
-                <pre class="example"><span class="code-js">function <span class="standout">multiply</span>(a,b) {
-  var result = a*b;
-  console.log(result);
-  return result;
-}
-
-var multiplied = multipy(3,4);</span></pre>
-            </div>
-        </div>
-
-        <h3>Anonymous</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>This function does not have a name. It's triggered after assigning a variable to it, then running that variable function name.</p>
-            </div>
-
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var <span class="standout">divided</span> = function() {
-    var result = 3/4;
-    console.log("3 divided by 4 is ", result);
-}
-
-divided();</span></pre>
-            </div>
-        </div>
-
-        <h3>Immediately invoked</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>Two ways to write the part that immediately invokes it:</p>
-                <ul>
-                    <li>(function () { /* ... */ })();</li>
-                    <li>(function () { /* ... */ }());</li>
-                </ul>
-            </div>
-
-            <div class="col-6">
-                <pre class="example"><span class="code-js">(function() {
-  var result = 12 / 0.75;
-  console.log("12 divided by 0.75 is ", result);
-} () )</span></pre>
             </div>
         </div>
     </section>
 
 
 
+    <section class="container">
+        <h1 type="button" data-toggle="collapse" data-target="#3-types-of-functions" aria-expanded="false" aria-controls="3-types-of-functions">3 types of Functions</h1>
+
+
+        <div class="collapse" id="3-types-of-functions">
+
+            <div class="row">
+                <div class="col">
+                    <p>Steps to add a new DOM element.</p>
+                    <ul>
+                        <li><span class="standout">Named</span> - executed when called by name. Usefull when the function needs to be called multiple times.</li>
+                        <li><span class="standout">Anonymous</span> - ran after being triggered by an event. Parenthesis are right after the word function.</li>
+                        <li><span class="standout">Immediately</span> - invoked function expressions run the moment the browser encounters them. These are anonymous functions with another () at the end to trigger them. And it's all wrapped in parenthesis.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <h3>Named</h3>
+            <div class="row">
+                <div class="col-6">
+                    <p>This function has a name of 'multiply'.</p>
+                </div>
+
+                <div class="col-6">
+                    <pre class="example"><span class="code-js">function <span class="standout">multiply</span>(a,b) {
+  var result = a*b;
+  console.log(result);
+  return result;
+}
+
+var multiplied = multipy(3,4);</span></pre>
+                </div>
+            </div>
+
+            <h3>Anonymous</h3>
+            <div class="row">
+                <div class="col-6">
+                    <p>This function does not have a name. It's triggered after assigning a variable to it, then running that variable function name.</p>
+                </div>
+
+                <div class="col-6">
+                    <pre class="example"><span class="code-js">var <span class="standout">divided</span> = function() {
+    var result = 3/4;
+    console.log("3 divided by 4 is ", result);
+}
+
+divided();</span></pre>
+                </div>
+            </div>
+
+            <h3>Immediately invoked</h3>
+            <div class="row">
+                <div class="col-6">
+                    <p>Two ways to write the part that immediately invokes it:</p>
+                    <ul>
+                        <li>(function () { /* ... */ })();</li>
+                        <li>(function () { /* ... */ }());</li>
+                    </ul>
+                </div>
+
+                <div class="col-6">
+                    <pre class="example"><span class="code-js">(function() {
+  var result = 12 / 0.75;
+  console.log("12 divided by 0.75 is ", result);
+} () )</span></pre>
+                </div>
+            </div>
+    </section>
+    <!-- End collapse section -->
+    </div>
 
 
 
 
 
-  <section class="container">
+
+
+    <section class="container">
         <h1>Declaring functions</h1>
         <h2>2 ways to declare a function</h2>
         <h3>Function declaration</h3>
-<h4>Declaring a function without a name</h4>
+        <h4>Declaring a function without a name</h4>
         <div class="row">
             <div class="col-6">
                 <p>This is only executed when called.</p>
@@ -132,19 +137,19 @@ plus(2,2);</span></span></pre>
             </div>
         </div>
 
-<h4>Declaring a function with a name</h4>
-<div class="row">
-    <div class="col-6">
-        <p>This is only executed when called.</p>
-    </div>
+        <h4>Declaring a function with a name</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>This is only executed when called.</p>
+            </div>
 
-    <div class="col-6">
-        <pre class="example"><span class="code-js">function myFunction(parameter1, parameter2, parameter3) {
+            <div class="col-6">
+                <pre class="example"><span class="code-js">function myFunction(parameter1, parameter2, parameter3) {
   code to be executed
 }</span></span></pre>
 
-    </div>
-</div>
+            </div>
+        </div>
 
 
 
@@ -160,9 +165,12 @@ plus(2,2);</span></span></pre>
             <div class="alert-icon">
                 <img src="../../_img/note-icon.png" width="60" height="60">
             </div>
-            <div class="alert-content"><p>If you create a function, you can call it by its function name.</p>
-              <p>But, if you assign the function to a variable, the function name no longer exists in the GLOBAL scope.</p>
-              <p>So, you must call the function by the variable name.</p></div></div>
+            <div class="alert-content">
+                <p>If you create a function, you can call it by its function name.</p>
+                <p>But, if you assign the function to a variable, the function name no longer exists in the GLOBAL scope.</p>
+                <p>So, you must call the function by the variable name.</p>
+            </div>
+        </div>
 
 
         <h4>Variable assigned but not used</h4>
@@ -239,18 +247,18 @@ var x = myFunction(4, 3) * 2;</span></pre>
             <div class="col">
                 <p>It doesn't matter. The browser loads all JS, then runs it.</p>
                 <p>But for readability, it's easier to put the function before it's called in the script.</p>
-              </div>
             </div>
-</section>
+        </div>
+    </section>
 
-<section class="container">
-    <h1>Where to define variables?</h1>
-    <div class="row">
-        <div class="col-6">
-            <p>You must define them BEFORE the function is called.</p>
-          </div>
-          <div class="col-6">
-              <pre class="example"><span class="code-js">function multiply(a,b) {
+    <section class="container">
+        <h1>Where to define variables?</h1>
+        <div class="row">
+            <div class="col-6">
+                <p>You must define them BEFORE the function is called.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">function multiply(a,b) {
   var result = a*b;
   console.log(result);
   return result;
@@ -259,34 +267,33 @@ var x = myFunction(4, 3) * 2;</span></pre>
 var multiplied = multipy(3,4);
 
 multiply();</span></pre>
-          </div>
+            </div>
         </div>
-</section>
+    </section>
 
 
 
 
-<section class="container">
-    <h1>Return values</h1>
-    <div class="row">
-        <div class="col">
-            <p>The 'return' keyword returns the value of your function statment.</p>
-<p>JS can also return an object or another function.</p>
-          </div>
+    <section class="container">
+        <h1>Return values</h1>
+        <div class="row">
+            <div class="col">
+                <p>The 'return' keyword returns the value of your function statment.</p>
+                <p>JS can also return an object or another function.</p>
+            </div>
         </div>
-</section>
+    </section>
 
 
 
-<section class="container">
-    <h1>Function literal??????????</h1>
-    <div class="row">
-        <div class="col">
-            <p>an expression that defines an unnamed function..????????????</p>
-          </div>
+    <section class="container">
+        <h1>Function literal??????????</h1>
+        <div class="row">
+            <div class="col">
+                <p>an expression that defines an unnamed function..????????????</p>
+            </div>
         </div>
-</section>
-
+    </section>
 
 
 
