--- a/index.html
+++ b/index.html
@@ -74,11 +74,23 @@
                   <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
                   <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
                   <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
+                  <li><a href="pages/functions/closures.html">Closures</a></li>
+                  <li><a href="pages/functions/modules.html">Modules</a></li>
+                  <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
                 </ul>
             </ul>
         </nav>
 
 
+        <h2>Objects</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                  <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
+                </ul>
+            </ul>
+        </nav>
 
 
         <h2>Common Code examples</h2>
