--- a/pages/objects/prototypal-inheritance.html
+++ b/pages/objects/prototypal-inheritance.html
@@ -72,6 +72,34 @@ firstDog.breed = "Doberman";
 
 
 
+    <section class="container">
+        <h1>Links to review</h1>
+        <div class="row">
+            <div class="col">
+                <ul><li>https://www.w3schools.com/js/js_object_prototypes.asp</li>
+                    <li>https://hackernoon.com/understanding-javascript-prototype-and-inheritance-d55a9a23bde2</li>
+                    <li>https://javascript.info/prototype-inheritance</li>
+                    <li>https://medium.com/javascript-scene/master-the-javascript-interview-what-s-the-difference-between-class-prototypal-inheritance-e4cd0a7562e9</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
