--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
+                    <li><a href="pages/basics/scope.html">Scope</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
                     <li><a href="pages/basics/this.html">this</a></li>
                     <li><a href="pages/basics/typeof.html">typeof</a></li>
@@ -71,10 +72,13 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
+                  <li><h5>Basics</h5></li>
                   <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
                   <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
                   <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
+                  <li><h5>Topics</h5></li>
                   <li><a href="pages/functions/closures.html">Closures</a></li>
+                  <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
                   <li><a href="pages/functions/modules.html">Modules</a></li>
                   <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
                 </ul>
