new object stuff

--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
+                  <li><a href="pages/objects/objects.html">Objects</a></li>
+                  <li><a href="pages/objects/methods.html">Methods</a></li>
                   <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
+                  <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
                 </ul>
             </ul>
         </nav>
