--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -18,13 +18,28 @@
 
 
 <script>
-function sayHi(name) {
-alert("Hi, "+name)
+
+
+function Course(title,instructor,level,views) {
+  this.title = title;
+  this.instructor = instructor;
+  this.level = level;
+  this.views = views;
+  this.updateViews = function() {
+      return ++this.views;
+    };
 }
 
-var hi = sayHi // assign a function to another variable
+var course01 = new Course("JavaScript Essential Training",
+                           "Teacher Name",
+                            1,
+                            0);
+console.log(course01);
 
-hi("dude") // call the function
+var course02 = new Course("New course name", "other teacher Name", 3, 1234);
+console.log(course02);
+
+
 
 </script>
 
